--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
+    "mssql": "^11.0.1",
     "openai": "^4.76.3",
     "uuid": "^11.0.3"
   },
