--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "mssql": "^11.0.1",
     "openai": "^4.76.3",
+    "serve-favicon": "^2.5.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
